hphp/hack/test/typecheck/union/shape_idx_refine.php.like_types.exp
File "shape_idx_refine.php", line 10, characters 10-11:
Invalid return type (Typing[4163])
File "shape_idx_refine.php", line 6, characters 12-15:
The field 'a' is optional
File "shape_idx_refine.php", line 6, characters 22-22:
The field 'a' is defined as required
File "shape_idx_refine.php", line 17, characters 10-11:
Invalid return type (Typing[4163])
File "shape_idx_refine.php", line 13, characters 12-21:
The field 'a' is optional
File "shape_idx_refine.php", line 13, characters 28-28:
The field 'a' is defined as required
File "shape_idx_refine.php", line 22, characters 12-13:
Invalid return type (Typing[4163])
File "shape_idx_refine.php", line 20, characters 13-16:
The field 'a' is optional
File "shape_idx_refine.php", line 20, characters 23-23:
The field 'a' is defined as required
File "shape_idx_refine.php", line 30, characters 12-13:
Invalid return type (Typing[4163])
File "shape_idx_refine.php", line 28, characters 13-22:
The field 'a' is optional
File "shape_idx_refine.php", line 28, characters 29-29:
The field 'a' is defined as required
